# DDmisID

./: .gitignore  LICENCE  LICENSE  README.md  Snakefile  _analysis_run.py  environment.yml  pyproject.toml  report.md  setup.py
.schema/: validated_config.json
.snakemake/metadata/: ZGF0YV9wYXJ0aXRpb25zLmRvbmU=  ZGRtaXNpZC5kb25l  c2NyYXRjaC90ZW1wbGF0ZXM=  c2NyYXRjaC9iaW4=  c2NyYXRjaC9iaW4vMjAxOC91cC90YXJnZXQvZWxlY3Ryb24vZWxlY3Ryb25fdG9fdGFyZ2V0X2xpa2UvcGVyZi5wa2w=  c2NyYXRjaC9iaW4vMjAxOC91cC90YXJnZXQvZWxlY3Ryb24vZWxlY3Ryb25fdG9fdGFyZ2V0X2xpa2UvcHJvY2Vzc2VkX3BlcmYucGts  c2NyYXRjaC9iaW4vMjAxOC91cC90YXJnZXQva2Fvbi9rYW9uX3RvX3RhcmdldF9saWtlL3BlcmYucGts  c2NyYXRjaC9iaW4vMjAxOC91cC90YXJnZXQva2Fvbi9rYW9uX3RvX3RhcmdldF9saWtlL3Byb2Nlc3NlZF9wZXJmLnBrbA==  c2NyYXRjaC9iaW4vMjAxOC91cC90YXJnZXQvcGlvbi9waW9uX3RvX3RhcmdldF9saWtlL3Byb2Nlc3NlZF9wZXJmLnBrbA==  (+66 more)
config/: calib_tuning.py  main.yml
data/: aliases.py  binning.json  eos_control.json
ddmisid/: __init__.py  assign_w_misid.py  auth.py  bml.py  bml_fitter.py  cli.py  collect_yields.py  consistency_checker.py  data_discretizer.py  eff_pid.py  engine.py  fit_control_data.py  fit_reco.py  fitter.py  generate_binning.py  ghost_pid_effs.py  make_binning.py  make_templates.py  pid_hist.py  postprocess_pid.py  pydantic_config_model.py  setup_pidcalib_jobs.py  snakemake_wrapper.py  super_hist.py
ddmisid/config/: calib_tuning.py  main.yml
tests/: test_binning_generator.py  test_bml_fitter.py  test_calib_tuning.py  test_ddmisid.py  test_efficiency_histogram_processing.py  test_template_maker.py
workflow/: Snakefile
(+26 files in other folders)
